force-app/main/default/objects/Retailer_Statistics_Import__c/Retailer_Statistics_Import__c.object-meta.xml
<CustomObject>
    <label>Retailer Statistics Import</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Retailer Statistics Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Statistics Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>