force-app/main/default/objects/Retailer_Statistics_Import__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Describes the Asset that was created from the Retailer Statistics Import record.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Retailer Statistics Imports</relationshipLabel>
    <relationshipName>Retailer_Statistics_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>