force-app/main/default/objects/Retailer_Statistics_Import__c/fields/CustomerPostalAddress__c.field-meta.xml
<CustomField>
    <fullName>CustomerPostalAddress__c</fullName>
    <description>Describes the Postal Address of the end customer.</description>
    <label>Customer Postal Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>