force-app/main/default/objects/Retailer_Statistics_Import__c/fields/EndCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>EndCustomerNumber__c</fullName>
    <description>Describes the number that can be used to identify the End Customer.</description>
    <label>End Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>