force-app/main/default/objects/Retailer_Statistics_Import__c/fields/IsbnEan__c.field-meta.xml
<CustomField>
    <fullName>IsbnEan__c</fullName>
    <description>Describes the ISBN/EAN numbrer of product sold.</description>
    <label>ISBN/EAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>