force-app/main/default/objects/Retailer_Statistics_Import__c/fields/LmlName__c.field-meta.xml
<CustomField>
    <fullName>LmlName__c</fullName>
    <description>Describes the LML Name that is only applicable to Plantyn</description>
    <label>LML Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>