force-app/main/default/objects/Retailer_Statistics_Import__c/fields/LmlNumber__c.field-meta.xml
<CustomField>
    <fullName>LmlNumber__c</fullName>
    <description>Describes the LML Number that is only applicable to Plantyn</description>
    <label>LML Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>