force-app/main/default/objects/Retailer_Statistics_Import__c/fields/LocationName__c.field-meta.xml
<CustomField>
    <fullName>LocationName__c</fullName>
    <description>Describes the Location Name of the end customer&apos;s school.</description>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>