force-app/main/default/objects/Retailer_Statistics_Import__c/fields/MatchStatus__c.field-meta.xml
<CustomField>
    <fullName>MatchStatus__c</fullName>
    <description>Describes the status of the matching process.</description>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error: account and product cannot be matched!</fullName>
            </value>
            <value>
                <fullName>Error: product cannot be matched!</fullName>
            </value>
            <value>
                <fullName>Error: account cannot be matched!</fullName>
            </value>
            <value>
                <fullName>Error!</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <isActive>false</isActive>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>