force-app/main/default/objects/Retailer_Statistics_Import__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <description>Describes the order date of the products sold.</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>