force-app/main/default/objects/Retailer_Statistics_Import__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Describes the product that was sold.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Retailer Statistics Imports</relationshipLabel>
    <relationshipName>Retailer_Statistics_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>