force-app/main/default/objects/Retailer_Statistics_Import__c/fields/RowId__c.field-meta.xml
<CustomField>
    <fullName>RowId__c</fullName>
    <description>Describes the Row ID which is applicable to Laromedia import.</description>
    <externalId>true</externalId>
    <label>Row ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>