force-app/main/default/objects/Retailer_Statistics_Import__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <description>Describes the School Name of the end customer.</description>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>