force-app/main/default/objects/Retailer_Statistics_Import__c/fields/SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Describes the account the products were sold to.</description>
    <label>Sold to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retailer Statistics Imports</relationshipLabel>
    <relationshipName>Retailer_Statistics_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>