force-app/main/default/objects/Retailer_Statistics_Import__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Describes the source of the import file.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laromedia</fullName>
            </value>
            <value>
                <fullName>TLN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>