force-app/main/default/objects/Retailer_Statistics_Import__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Transforms the original status field to a translated Status field</description>
    <formula>CASE(StatusOriginal__c,
&quot;Levererade&quot;,&quot;Delivered&quot;,
&quot;Avbeställd&quot;,&quot;Cancelled&quot;,
&quot;Beställd&quot;,&quot;Ordered&quot;,
&quot;EB Manuell order&quot;,&quot;Ordered&quot;,
&quot;Vilande&quot;,&quot;Resting&quot;,
&quot;Utgått&quot;,&quot;Expired&quot;,
&quot;Restnoterade&quot;,&quot;Back Ordered&quot;,&quot;&quot;)</formula>
    <label>Status (Translated)</label>
    <type>Text</type>
</CustomField>