force-app/main/default/objects/Retailer_Statistics_Import__c/fields/StatusOriginal__c.field-meta.xml
<CustomField>
    <fullName>StatusOriginal__c</fullName>
    <description>Describes the status of the order according to the trade partner.</description>
    <label>Status (Original)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>