force-app/main/default/objects/Retailer_Statistics_Import__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Describes the title of the product sold.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>