force-app/main/default/objects/Retailer_Statistics_Import__c/fields/TradePartnerCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>TradePartnerCustomerNumber__c</fullName>
    <description>Describes the customer number that the trade partner assigned to the end customer.</description>
    <label>Trade Partner Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>