force-app/main/default/objects/Retailer_Statistics_Import__c/fields/TradePartnerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>TradePartnerOrderNumber__c</fullName>
    <description>Describes the order number that was assigned by the trade partner.</description>
    <label>Trade Partner Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>