force-app/main/default/objects/Retailer_Statistics_Import__c/fields/TradePartnerOrderProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>TradePartnerOrderProcessingDate__c</fullName>
    <description>Describes the date when the order was processed by the trade partner.</description>
    <label>Trade Partner Order Processing Date</label>
    <type>Date</type>
</CustomField>