force-app/main/default/objects/Retailer_Statistics_Import__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MatchStatus__c</columns>
    <columns>Source__c</columns>
    <columns>OperatingCompany__c</columns>
    <columns>EndCustomerNumber__c</columns>
    <columns>SoldToAccount__c</columns>
    <columns>IsbnEan__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>